# game_engine

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  SConstruct  cppcheck.sh  engine.cfg  logging.conf
inc/components/: basic.hpp  pathfinding.hpp  player.hpp  render.hpp
inc/components/basic/: position.hpp
inc/components/render/: render.hpp
inc/core/: app.h  app.hpp  application.hpp  config.hpp  logger_manager.hpp  logging.hpp  world.hpp
inc/core/input/: input.h  input.hpp
inc/core/logging/: logging.h
inc/core/loop/: loop.h  loop.hpp
inc/core/management/: contentmanager.h
inc/core/render/: render.h  render.hpp  surfaceManager.hpp
inc/sdlwrap/: exceptions.hpp  render.hpp  sdl.hpp  surface.hpp  window.hpp
inc/systems/: events.hpp  pathfinding.hpp  player.hpp  rendering.hpp
lib/: CMakeLists.txt  SConscript
src/: CMakeLists.txt  SConscript  main.c  main.cpp
src/components/: basic.cpp
src/core/: SConscript  app.cpp  application.cpp  config.cpp  logger_manager.cpp  logging.cpp  world.cpp
src/core/input/: SConscript  input.cpp
src/core/logging/: SConscript  logging.cpp
src/core/loop/: SConscript  loop.cpp
src/core/management/: SConscript  contentmanager.cpp
src/core/render/: SConscript  render.cpp  surfaceManager.cpp
src/include/core/input/: input.h
src/include/core/logging/: logging.h
src/include/core/loop/: loop.h
src/include/core/management/: contentmanager.h
src/include/core/render/: render.h
src/samples/: sample1.cpp
src/sdlwrap/: SConscript  render.cpp  sdl.cpp  surface.cpp  window.cpp
src/systems/: events.cpp  pathfinding.cpp  player.cpp  rendering.cpp
test/: .gitignore  CMakeLists.txt  SConscript  logging.conf  runTests.sh  runtests.cpp
test/components/: basic.cpp
test/core/: world.cpp
test/core/render/: render.cpp  surfaceManager.cpp
test/samples/: SConscript  sample1_unittest.cpp
test/sdlwrap/: render.cpp  sdl.cpp  surface.cpp  window.cpp
travis/: before-install_linux.sh  install_linux  install_linux.sh  script_linux  script_linux.sh
